Add an in-memory policy service (#170)
* #167 Removing S3 policy service.

* #167 Updating test for outside path delete.

* #167 Removing unused class.

* #169 Adding in memory policy service.